fixed overflow issue

--- a/WWW/css/style.css
+++ b/WWW/css/style.css
@@ -78,6 +78,7 @@ h1, h2, h3, h4, h5, h6 {
   	width: 100%; 
   	height: 100%;
   	opacity: 1;
+  	overflow: hidden;
 }
 
 #controls {
